--- a/ASCII-MapEditor/ASCII-MapEditor/ASCII-MapEditor.vcxproj.filters
+++ b/ASCII-MapEditor/ASCII-MapEditor/ASCII-MapEditor.vcxproj.filters
@@ -30,4 +30,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Items.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Monsters.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Npcs.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
